# haalka

./: .editorconfig  .gitconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  kaaj.just  release-plz.toml  repo_prompt.ncl  rustfmt.toml  sync_counter_example_readme.py
.github/nickel/: ci.ncl  common.ncl  release.ncl  test.ncl  utils.ncl
.github/workflows/: build_and_deploy_example.yaml  build_example.yaml  ci.yaml  cleanup_pr_previews.yaml  examples_on_main.yaml  pr_previews.yaml  preview_build_deploy.yaml  preview_deploy.yaml  release-plz.yaml  release.yaml  serve_examples.yaml
docs/: example_showcase_scripts.md
examples/: README.md  accordion.rs  align.rs  button.rs  calculator.rs  challenge01.rs  challenge02.rs  challenge03.rs  challenge04.rs  challenge05.rs  challenge07.rs  character_editor.rs  counter.rs  dot_counter.rs  draggable.rs  dragging.rs  ecs_ui_sync.rs  example_showcase_scripts.md  healthbar.rs  inventory.rs  key_values_sorted.rs  main_menu.rs  many_buttons.rs  nested_lists.rs  responsive_menu.rs  scroll.rs  scroll_grid.rs  simple_dragging.rs  snake.rs  utils.rs
examples/align/: Cargo.toml
examples/align/src/: main.rs
examples/challenge01/: Cargo.toml
examples/challenge01/src/: main.rs
examples/challenge02/: Cargo.toml
examples/challenge02/src/: main.rs
examples/challenge03/: Cargo.toml
examples/challenge03/src/: main.rs
examples/challenge04/: Cargo.toml
examples/challenge04/src/: main.rs
examples/challenge05/: Cargo.toml
examples/challenge05/src/: main.rs
examples/ecs_ui_sync/: Cargo.toml
examples/ecs_ui_sync/src/: main.rs
examples/ecs_world_ui_world_sync/: Cargo.toml
examples/ecs_world_ui_world_sync/src/: main.rs
examples/key_values_sorted/: Cargo.toml
examples/key_values_sorted/src/: main.rs
examples/snake/: Cargo.toml
examples/snake/src/: main.rs
examples/webgl2/align/: haalka-1bebeb91bb52296b.js  haalka-2d610fd99206d625.js  haalka-308fd38cca6ba6a2.js  haalka-738a632fbfee1aa3.js  haalka-73a1ac7d1f43d60e.js  haalka-85b37ae9da1062ea.js  haalka-a8b64f37e99ccf77.js  index.html
examples/webgl2/button/: haalka-6b16e9e57b9fc68a.js  haalka-7a8c66e8b29f4448.js  haalka-9a070d118fcbb851.js  haalka-b9abfb8a301abc3.js  haalka-baea34cf0b64952b.js  haalka-cd9cb6891f27141a.js  haalka-d9e8522ed5c433c5.js  haalka-e42ac9c318e98909.js  index.html
examples/webgl2/calculator/: haalka-48c0a6d40579fe59.js  haalka-77d7c8f002e5eb9d.js  haalka-87e907b27d2a9937.js  haalka-8f942cf4d1adf92f.js  haalka-bed29a16a7e70508.js  haalka-dca24727098e8fe0.js  index.html
examples/webgl2/character_editor/: haalka-10a56854dea5f20c.js  haalka-13eecc960647728c.js  haalka-1b632892a344543c.js  haalka-23de273ee59ce9eb.js  haalka-634e7f7fd105c1f0.js  haalka-c6a427c1000365ae.js  index.html
examples/webgl2/counter/: haalka-15178ccd147894ae.js  haalka-1b3a75b59d921761.js  haalka-38934bc0f6dc5745.js  haalka-4578c3915481d8c7.js  haalka-474f8fbe5a5dad68.js  haalka-9a7591ace00b5f4c.js  haalka-a1a40e2b1695b3af.js  haalka-f3fa8e7ef4b16e8e.js  index.html
examples/webgl2/dot_counter/: haalka-2b3da857ad30c8a3.js  haalka-2c6938d88407e5bb.js  haalka-3128a6932c33c9a9.js  haalka-b79ac5f25f8c1e33.js  haalka-c4f4ed6e9eefb3f5.js  index.html
examples/webgl2/dragging/: haalka-b0c6511c85241835.js  index.html
examples/webgl2/ecs_ui_sync/: haalka-644a5b9cb8faf94c.js  index.html
examples/webgl2/healthbar/: haalka-1f4840613977fb6a.js  haalka-213963d7b8df2e68.js  haalka-2beea919335a04db.js  haalka-40a03b52e9348d8e.js  haalka-4c58223967ee2785.js  haalka-63e7256410913c5d.js  haalka-6c7639cb4011f801.js  haalka-a0ed40f2dce55c8d.js  haalka-c559e34a402d6933.js  haalka-e11bb5203fca159b.js  index.html
examples/webgl2/inventory/: haalka-2b370c5c0f1d318b.js  haalka-3a90a1445cacc87e.js  haalka-41f95e0eab15d1c6.js  haalka-4f7e0686fbda2bb.js  haalka-4f9632f2d3255597.js  haalka-6d2505c04e162e89.js  haalka-968fdc291e3e5af3.js  haalka-af01956e906e18a1.js  haalka-b094ac6ecb488fce.js  index.html
examples/webgl2/key_values_sorted/: haalka-3aff92943feb306.js  haalka-3bd46d59c2fb174c.js  haalka-881ce0cd24ce9f20.js  haalka-9d801ffba6227e1a.js  haalka-a9df88ee63474701.js  haalka-e7ab3186ca3efd00.js  haalka-e7e54743ed86f175.js  index.html
examples/webgl2/main_menu/: haalka-b4b518acd687a96c.js  haalka-bdea424980916704.js  haalka-d723d3065a66652d.js  haalka-fb45ca7aab68ea9c.js  index.html
examples/webgl2/nested_lists/: haalka-287f5390c45a19be.js  haalka-acfb9aecee4aae9f.js  index.html
examples/webgl2/responsive_menu/: haalka-466905c40170cb3.js  haalka-583d813beed5dc2b.js  haalka-5d11c948a19f55bf.js  haalka-61b7a9276d3da06f.js  haalka-7c8a7430250ae81.js  haalka-927999bf8477e412.js  haalka-d0c54e33230fb064.js  index.html
examples/webgl2/scroll/: haalka-22c6d81f0f68bd22.js  haalka-2aa5e70ca87fe46c.js  haalka-624bc85854365143.js  haalka-9f6005215ca22c78.js  haalka-eefc18af4fa836bb.js  index.html
kaaj/: Nickel-pkg.ncl  README.md  justfile  main.ncl
kaaj/src/: build_example.ncl  cleanup_pr_previews.ncl  common.ncl  examples_on_main.ncl  pr_previews.ncl  release.ncl  utils.ncl  wasm_example_index_template.ncl
nickel/: Nickel-pkg.ncl  build_and_deploy_example.ncl  build_example.ncl  ci.ncl  cleanup_pr_previews.ncl  common.ncl  examples_on_main.ncl  main.ncl  pr_previews.ncl  preview_build_deploy.ncl  preview_deploy.ncl  release.ncl  wasm_example_index_template.ncl
nickel_old/: common.ncl
nk/: Nickel-pkg.ncl
src/: align.rs  column.rs  derive.rs  el.rs  element.rs  global_event_aware.rs  grid.rs  lib.rs  main.rs  mouse_wheel_scrollable.rs  nearby_element_addable.rs  node_builder.rs  paragraph.rs  pointer_event_aware.rs  raw.rs  raw_el.rs  row.rs  scrollable.rs  sizable.rs  sizeable.rs  stack.rs  text_input.rs  utils.rs  viewport_mutable.rs
src/futures_signals/: align.rs  column.rs  derive.rs  el.rs  element.rs  global_event_aware.rs  grid.rs  mod.rs  mouse_wheel_scrollable.rs  node_builder.rs  pointer_event_aware.rs  raw.rs  row.rs  stack.rs  text_input.rs  utils.rs  viewport_mutable.rs
src/text_input/: mod.rs
(+807 files in other folders)
