[workspace]
members = ["MoonZoon/crates/*"]
resolver = "2"

[package]
name = "haalka"
version = "0.5.1"
edition = "2024"
categories = ["asynchronous", "gui", "game-development"]
description = "ergonomic reactive Bevy UI library powered by FRP signals"
exclude = [".github/", ".vscode/", "MoonZoon/"]
keywords = ["ui", "reactive", "signals", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/haalka"
documentation = "https://docs.rs/haalka"

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_camera = { version = "0.17", optional = true, default-features = false }
bevy_color = { version = "0.17", optional = true, default-features = false }
bevy_dev_tools = { version = "0.17", default-features = false, optional = true }
bevy_derive = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false, features = ["multi_threaded"] }
bevy_input = { version = "0.17", default-features = false }
bevy_input_focus = { version = "0.17", optional = true, default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }
bevy_picking = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_render = { version = "0.17", default-features = false, features = ["webgl"] }
bevy_tasks = { version = "0.17", default-features = false, features = ["multi_threaded"] }
bevy_text = { version = "0.17", default-features = false }
bevy_time = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17", default-features = false }
bevy_ui = { version = "0.17", default-features = false }
bevy_ui_render = { version = "0.17", optional = true, default-features = false }
bevy_utils = { version = "0.17", default-features = false }
bevy_window = { version = "0.17", default-features = false }
bevy_winit = { version = "0.17", default-features = false, features = ["x11"] }
bevy_ui_text_input = { version = "0.6", default-features = false, optional = true }
bevy-async-ecs = { version = "0.9", optional = true }
jonmo = { version = "0.4", path = "../jonmo", features = ["builder"] }
cosmic-text = "0.14.2"
apply = "0.3"
cfg-if = "1.0"
enclose = "1.2"
futures-signals = { version = "0.3", optional = true }
paste = { version = "1.0", optional = true }
document-features = { version = "0.2", optional = true }
# aalo = { path = "../aalo", version = "0.0", optional = true }

# TODO: use MoonZoon's futures-signals/futures-util extensions directly when it is published as a crate
haalka_futures_signals_ext = { version = "0.0.3", path = "MoonZoon/crates/futures_signals_ext", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-io = { version = "2.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
send_wrapper = { version = "0.6", features = ["futures"], optional = true }
bevy_winit = { version = "0.17", optional = true }
bevy_audio = { version = "0.17", optional = true, features = ["android_shared_stdcxx"] }
bevy_core_pipeline = { version = "0.17", optional = true, default-features = false, features = ["webgl"] }
bevy_pbr = { version = "0.17", optional = true, default-features = false, features = ["webgl"] }
bevy_gizmos = { version = "0.17", optional = true, default-features = false, features = ["webgl"] }
bevy_sprite = { version = "0.17", optional = true, default-features = false}

[features]
default = [
    "text_input",
    "derive",
    "utils",
]

## [bevy_ui_text_input](https://github.com/ickshonpe/bevy_ui_text_input) text input widget integrated with signals.
text_input = ["derive", "bevy_color", "bevy_input_focus", "bevy_ui_text_input"]

## Macro ([`impl_haalka_methods!`](https://docs.rs/haalka/latest/haalka/macro.impl_haalka_methods.html)) for deriving convenience methods for modifying components on custom element structs with static values, functions, or signals.
derive = ["paste", "bevy_camera"]

## Utilities for working with async.
utils = []

## `DebugUiPlugin` which enables toggling [`bevy_dev_tools::ui_debug_overlay::DebugUiPlugin`](https://docs.rs/bevy/latest/bevy/dev_tools/ui_debug_overlay/struct.DebugUiPlugin.html) with the `F1` key; requires a camera to be marked with the [`IsDefaultCamera`](https://docs.rs/bevy/latest/bevy/prelude/struct.IsDefaultUiCamera.html#) component.
debug = ["bevy_ui_render/bevy_ui_debug"]

## Deprecated futures-signals based reactive primitives. Use jonmo-based reactivity instead for new code.
futures_signals = ["futures-signals", "bevy-async-ecs", "haalka_futures_signals_ext", "async-io", "gloo-timers", "send_wrapper"]
futures_signals_derive = ["paste", "bevy_camera"]
futures_signals_utils = []
futures_signals_ui = ["futures_signals", "futures_signals_derive", "futures_signals_utils"]
futures_signals_text_input = ["futures_signals_ui", "bevy_color", "bevy_input_focus", "bevy_ui_text_input"]

deployed_wasm_example = []

[dev-dependencies]
bevy = "0.17"
# TODO: https://github.com/NiklasEi/bevy_asset_loader/pull/259
# bevy_asset_loader = { version = "0.23", features = ["2d"] }
colorgrad = "0.8"
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }
calc = { version = "0.5", default-features = false }
rust_decimal = "1.39"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.bevy_rand]
version = "0.12"
features = ["wyrand"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.bevy_rand]
version = "0.12"
features = ["wyrand", "wasm_js"]

[package.metadata.cargo-all-features]
allowlist = [
    "text_input",
    "derive",
    "utils",
    "debug",
]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[[example]]
name = "align"
path = "examples/align.rs"
doc-scrape-examples = true
# TODO: relying on the features here for `cargo run --example ...` enables moving the
# examples/utils.rs to src/utils.rs behind a feature flag; this already works for building docs
# requires https://github.com/rust-lang/cargo/issues/4663#issue-268904412
# required-features = ["examples", "debug"]

[[example]]
name = "button"
path = "examples/button.rs"
doc-scrape-examples = true

[[example]]
name = "calculator"
path = "examples/calculator.rs"
doc-scrape-examples = true

[[example]]
name = "main_menu"
path = "examples/main_menu.rs"
doc-scrape-examples = true

[[example]]
name = "inventory"
path = "examples/inventory.rs"
doc-scrape-examples = true

[[example]]
name = "healthbar"
path = "examples/healthbar.rs"
doc-scrape-examples = true

[[example]]
name = "responsive_menu"
path = "examples/responsive_menu.rs"
doc-scrape-examples = true

[[example]]
name = "character_editor"
path = "examples/character_editor.rs"
doc-scrape-examples = true

[[example]]
name = "counter"
path = "examples/counter.rs"
doc-scrape-examples = true

[[example]]
name = "dot_counter"
path = "examples/dot_counter.rs"
doc-scrape-examples = true

[[example]]
name = "key_values_sorted"
path = "examples/key_values_sorted.rs"
doc-scrape-examples = true

[[example]]
name = "scroll_grid"
path = "examples/scroll_grid.rs"
doc-scrape-examples = true

[[example]]
name = "scroll"
path = "examples/scroll.rs"
doc-scrape-examples = true

[[example]]
name = "snake"
path = "examples/snake.rs"
doc-scrape-examples = true

[[example]]
name = "nested_lists"
path = "examples/nested_lists.rs"
doc-scrape-examples = true

[[example]]
name = "dragging"
path = "examples/dragging.rs"
doc-scrape-examples = true

[[example]]
name = "utils"
path = "examples/utils.rs"
doc-scrape-examples = true
crate-type = ["lib"]
